# sqlAlchemy-learn

./: .env  .gitignore  alembic.ini  db_schema.md  docker-compose.yaml  pyproject.toml
app/: config.py  datebase.py  main.py
app/crud/: __init__.py  crud_base.py  employee_crud.py  faculty_crud.py  group_crud.py  student_crud.py  teacher_crud.py
app/db/: data.py  init_db.py  random_data.py  session.py
app/models/: __init__.py  base_model.py  class_model.py  discipline_model.py  employee_model.py  faculty_model.py  group_model.py  profile_model.py  student_model.py  subject_model.py  teacher_model.py  user_model.py
app/models/links/: class_group_model.py
app/utils/: array_functions.py  random_string.py  timer.py
migrations/: env.py
migrations/app/: env.py
migrations/app/versions/: 51e27f0ec3ab_update.py
migrations/versions/: 002d969d4eb7_discipline.py  2023_09_13_0033-5d2c968230a6_faculty.py  2023_09_13_1351-fc0fc2619902_empl.py  2023_09_24_0016-2975b4ab0d8d_update_st_emp.py  2023_09_29_0222-b79e6aa81f86_init.py  2023_09_30_1956-8d58ff2354fa_add_student_field_faculty.py  2023_09_30_2121-6edb6e8a4523_add_teacher.py  2023_09_30_2208-536a8ee9b721_del_common_fields.py  2023_09_30_2210-3509c2fe1727_add_teacher.py  2023_09_30_2353-f50c8f2f6c97_add_group.py  2023_10_01_0315-ebf7108276d4_add_class.py  2023_10_02_0225-fd49a1e59d21_add_subject_new_relationship_class.py  2023_10_02_1452-ce44c2643f7a_add_field_faculty_on_student.py  a595a894168c_discipline.py  d296e1db8e73_update_user.py  db09671185fb_update.py
