[tool.poetry]
name = "sqlalchemy-learn"
version = "0.1.0"
description = ""
authors = ["Denis <kosobanovden@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
faker = "^19.6.1"
motor = "^3.3.1"



[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
